--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,7 +23,22 @@
     }
 
   }
-
+  @media(max-width: 500px) {
+    .space-images {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .blast {
+        width: 100%;
+      }
+      .launch{
+        display: none;
+      }
+      .sky {
+        display: none;
+      }
+    }
+  }
   .space-images {
     display: flex;
     flex-wrap: wrap;
